<resources>
    <string name="app_name">UrineAnalysis</string>
    <string name="btn_analysis">Analysis</string>
    <string name="btn_chart">chart</string>
    <string name="btn_result">result</string>
    <string name="btn_album">album</string>

    <string name="btn_chart_to_gloucose">Glocose</string>
    <string name="btn_chart_to_protein">Protein</string>
    <string name="btn_chart_to_rbc">RBC</string>
    <string name="btn_chart_to_ph">PH</string>


    <string name="show_histogram">Show Histogram</string>
    <string name="source_image">Source Image</string>
    <string name="select_gallery">Select Image from gallery</string>

    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
