<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/ImageView"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ImageView" />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                android:layout_margin="20dp"
                android:layout_weight="1"
                android:id="@+id/btn_analysis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFBB97"
                android:text="@string/btn_analysis"
                android:textSize="20dp"
                />

            <Button
                android:layout_margin="20dp"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/btn_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"



                android:background="#FFBB97"

                android:text="@string/btn_album"

                />



        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_weight="1"
                android:layout_margin="20dp"

                android:id="@+id/btn_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFBB97"
                android:textSize="20dp"

                android:text="@string/btn_result"

                />

            <Button
                android:layout_weight="1"
                android:layout_margin="20dp"

                android:id="@+id/btn_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFBB97"
                android:textSize="20dp"
                android:text="@string/btn_chart"
                />


        </LinearLayout>



    </LinearLayout>



</LinearLayout>